@@ -11,9 +11,15 @@ Changes in version 0.1.2.8-alpha - 2007-??-??
     - Report events where a resolve succeeded or where we got a socks
       protocol error correctly, rather than calling both of them "INTERNAL".
 
-  o Minor bugfixes (other)
+  o Minor bugfixes (other):
     - Display correct results when reporting which versions are recommended,
       and how recommended they are.  (Resolves bug 383.)
+
+  o Minor features:
+    - Warn the user when an application uses the obsolete binary v0 control
+      protocol.  We're planning to remove support for it during the next
+      development series, so it's good to give people some advance warning.
+
 
 Changes in version 0.1.2.7-alpha - 2007-02-06
   o Major bugfixes (rate limiting):
